<resources>
    <string name="com.crashlytics.android.build_id">730cf853-fa1f-4614-a5b3-368cac5dfd72</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about">O aplikaci</string>
    <string name="about_author">Autoři: Ondřej Čermák, Matouš Skála</string>
    <string name="about_copyright">Copyright © 2012 POMO Media Group s.r.o. Všechna práva vyhrazena.</string>
    <string name="about_licences"> Apache Licence, Version 2.0\n - NineOldAndroids\n - DragSortListView\n - OkHttp\n - Picasso\n - StyledDialogs\n </string>
    <string name="about_licences_label">Použitý open-source software:</string>
    <string name="about_text"> Tato aplikace je jedinou oficiální aplikací \"Česko-Slovenské filmové databáze\" pro mobilní telefony a jiná zařízení s operačním systémem Android. Aplikace slouží pro snazší vyhledávání filmů a tvůrců v \"Česko-Slovenské filmové databázi\". Neposkytuje však veškerá data, která jsou k nalezení na webové verzi ČSFD.cz. Z toho důvodu je možné z každého profilu filmu či tvůrce rychle přejít přímo na web. \n\nPoužíváním aplikace souhlasíte s odesíláním anonymních statistických dat. </string>
    <string name="about_title">ČSFD.cz</string>
    <string name="about_version_label">verze</string>
    <string name="action_mode_selected_count">Vybráno: %s</string>
    <string name="activity_comment">komentář</string>
    <string name="activity_commented">okomentoval</string>
    <string name="activity_fetching">Načítám aktivitu…</string>
    <string name="activity_label_about">O aplikaci</string>
    <string name="activity_label_charts">Žebříčky</string>
    <string name="activity_label_cinemadetails">Detail kina</string>
    <string name="activity_label_cinemas">Program kin</string>
    <string name="activity_label_contacts">Napsat zprávu</string>
    <string name="activity_label_creatordetails">Profil tvůrce</string>
    <string name="activity_label_creatordetails_biography">Biografie tvůrce</string>
    <string name="activity_label_creatordetails_filmography_actor">Herecká filmografie tvůrce</string>
    <string name="activity_label_creatordetails_filmography_director">Režijní filmografie tvůrce</string>
    <string name="activity_label_favorites">Oblíbení</string>
    <string name="activity_label_moviedetails">Profil filmu</string>
    <string name="activity_label_moviedetails_comments">Komentáře filmu</string>
    <string name="activity_label_moviedetails_creators">Tvůrci filmu</string>
    <string name="activity_label_moviedetails_gallery">Galerie filmu</string>
    <string name="activity_label_moviedetails_info">Obsah filmu</string>
    <string name="activity_label_preferences">Nastavení</string>
    <string name="activity_label_search">Výsledky hledání</string>
    <string name="activity_label_tvschedule">TV program</string>
    <string name="activity_label_tvstations">TV stanice</string>
    <string name="activity_label_tvtips">TV tipy</string>
    <string name="activity_label_user">Profil uživatele</string>
    <string name="activity_label_video">Video</string>
    <string name="activity_rated">ohodnotil</string>
    <string name="activity_rating">hodnocení</string>
    <string name="activity_updated">změnil</string>
    <string name="ad_unit_id">ca-app-pub-2360850846910573/7670990648</string>
    <string name="all_episodes">Všechny epizody</string>
    <string name="app_desc">Česko-Slovenská filmová databáze</string>
    <string name="app_name">ČSFD.cz</string>
    <string name="in_cinemas">Hrají v kinech</string>
    <string name="in_tv">Hrají v TV</string>
    <string name="loading_button_try_again">Zkusit znovu</string>
    <string name="loading_error_generic">Při načítání dat došlo k chybě.</string>
    <string name="loading_progress_generic">Načítání…</string>
    <string name="menu_about">O aplikaci</string>
    <string name="menu_add_to_watchlist">Chci vidět</string>
    <string name="menu_comment">Hodnotit</string>
    <string name="menu_goto_web">Přejít na web</string>
    <string name="menu_login">Přihlásit</string>
    <string name="menu_logout">Odhlásit se</string>
    <string name="menu_preferences">Nastavení</string>
    <string name="menu_search">Hledat</string>
    <string name="menu_share">Sdílet</string>
    <string name="menu_sort">Řadit</string>
    <string name="menu_sort_rating">dle hodnocení</string>
    <string name="menu_sort_time">dle času vysílání</string>
    <string name="more">Více…</string>
    <string name="news_in_version">\n- Opravy chyb</string>
    <string name="news_title">Novinky</string>
    <string name="news_version_label">verze</string>
    <string name="next_episode">Další epizoda</string>
    <string name="preferences_cat_charts">Žebříčky</string>
    <string name="preferences_cat_global">Globální</string>
    <string name="preferences_cat_home">Úvodní obrazovka</string>
    <string name="preferences_cat_movie">Profil filmu / Profil tvůrce</string>
    <string name="preferences_cat_tv">TV program</string>
    <string name="preferences_charts_sort">Pořadí žebříčků</string>
    <string name="preferences_charts_sort_desc">Nastavit vlastní pořadí žebříčků</string>
    <string name="preferences_home_sort">Položky na úvodní obrazovce</string>
    <string name="preferences_home_sort_desc">Nastavit zobrazované položky a jejich pořadí</string>
    <string name="preferences_movie_posters">Obrázky v seznamech</string>
    <string name="preferences_movie_posters_desc">Zobrazí plakáty filmů a portréty autorů v seznamech</string>
    <string name="preferences_movie_subtitles_size">Velikost titulků</string>
    <string name="preferences_movie_subtitles_size_desc">Velikost titulků při přehrávání videa</string>
    <string name="preferences_notifications">Notifikace</string>
    <string name="preferences_notifications_desc">Nastavit přijímané notifikace</string>
    <string name="preferences_text_size">Velikost písma</string>
    <string name="preferences_text_size_desc">Velikost písma v celé aplikaci</string>
    <string name="preferences_tv_stations">TV stanice</string>
    <string name="preferences_tv_stations_desc">Nastavit sledované TV stanice</string>
    <string name="prev_episode">Předchozí epizoda</string>
    <string name="seasons_and_episodes">Série a epizody</string>
    <string name="share">Sdílet</string>
    <string name="side_menu_account">Můj účet</string>
    <string name="side_menu_bluray">Vychází na Blu-ray</string>
    <string name="side_menu_charts">Žebříčky</string>
    <string name="side_menu_cinemas">Program kin</string>
    <string name="side_menu_dvd">Vychází na DVD</string>
    <string name="side_menu_favorites">Oblíbení</string>
    <string name="side_menu_homescreen">Hlavní stránka</string>
    <string name="side_menu_messages">Pošta</string>
    <string name="side_menu_tvschedule">TV program</string>
    <string name="side_menu_tvtips">TV tipy</string>
    <string name="side_menu_videos">Videa</string>
    <string name="side_menu_watchlist">Chci vidět</string>
    <string name="subtitles_default_size">22</string>
    <string name="text_default_size">1f</string>
    <string name="web">Web</string>
</resources>