<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_action_search" android:id="@id/menu_item_search" android:title="@string/menu_search" />
    <item android:icon="@drawable/ic_action_share" android:id="@id/menu_item_share" android:orderInCategory="0" android:title="@string/menu_share" />
    <item android:icon="@drawable/ic_action_rating" android:id="@id/menu_item_comment" android:title="@string/menu_comment" />
    <item android:id="@id/menu_item_watchlist" android:orderInCategory="1" android:title="@string/menu_add_to_watchlist" />
    <item android:id="@id/menu_item_login" android:orderInCategory="2" android:title="@string/menu_login" />
    <item android:id="@id/menu_item_web" android:orderInCategory="3" android:title="@string/menu_goto_web" />
    <item android:id="@id/menu_item_preferences" android:orderInCategory="4" android:title="@string/menu_preferences" />
</menu>
