<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_action_search" android:id="@id/menu_item_search" android:orderInCategory="0" android:title="@string/menu_search" />
    <item android:icon="@drawable/ic_action_sort" android:id="@id/menu_item_sort" android:orderInCategory="1" android:title="@string/menu_sort">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@id/menu_item_sort_time" android:title="@string/menu_sort_time" />
                <item android:id="@id/menu_item_sort_rating" android:title="@string/menu_sort_rating" />
            </group>
        </menu> />
    <item android:id="@id/menu_item_login" android:orderInCategory="20" android:title="@string/menu_login" />
    <item android:id="@id/menu_item_preferences" android:orderInCategory="30" android:title="@string/menu_preferences" />
</menu>
